--- a/site/default.css
+++ b/site/default.css
@@ -30,15 +30,14 @@ body
 h2
 {
 	font-size: 2.8em;
-	color: rgba(0, 0, 0, 0.8);;
-	margin-bottom: 1em;
+	color: rgba(0, 0, 0, 0.8);
 }
 
 h3
 {
 	justify-self: right;
 	margin-bottom: 1em;
-	margin-top: 2em;
+	margin-top: 3em;
 	padding-bottom: 1em;
 	border-bottom: 1px solid rgba(0,0,0,0.1);
 	text-transform: uppercase;
