--- a/site/default.css
+++ b/site/default.css
@@ -1,24 +1,19 @@
 
-html, body {
+html, body 
+{
 	height: 100%;
-	width: 100%;
 	margin: 0px;
 	padding: 0px;
 	display: flex;
-}
-
-body
-{
 	background: #EDEDED;
 	font-family: 'Montserrat', sans-serif;
-	align-self: center;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
 }
 
 .wrapper
 {
-	width: 100%;
-	text-align: center;
-	align-self: center;
 	margin: 3em;
 }
 
@@ -35,7 +30,6 @@ h2
 
 h3
 {
-	justify-self: right;
 	margin-bottom: 1em;
 	margin-top: 3em;
 	padding-bottom: 1em;
@@ -69,8 +63,6 @@ h3
 	overflow: hidden;
 	margin-top: 1.2em;
 	display: flex;
-	align-content: center;
-	align-items: center;
 	justify-content: center;
 }
 
@@ -86,7 +78,6 @@ h3
 {
 	font-size: .9em;
 	padding: 0em 1em 1em 1em;
-	text-align: center;
 }
 
 .box a
